--- a/frontend/home.css
+++ b/frontend/home.css
@@ -161,3 +161,15 @@ tr:hover {
 #addUser:hover {
     background-color: #0056b3;
 }
+
+.db-row td,
+.table-row td {
+  color: #0d6efd;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.db-row:hover td,
+.table-row:hover td {
+  color: #0a58ca;
+}
+
